# voxbirch

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.html  about.toml  deny.toml  voxbirch.out
.github/workflows/: voxbirch.yml
python/: Cargo.toml  Makefile  THIRD_PARTY_NOTICES.html  about.toml  deny.toml
python/src/: lib.rs
src/: args.rs  ascii.rs  birch.rs  file_io.rs  isim.rs  lib.rs  main.rs  utils.rs  voxel.rs
