[package]
name = "voxbirch"
version = "0.1.0"
edition = "2024"
description = "What your CLI does"
license = "MIT"
repository = "https://github.com/Pakman450/voxbirch"

[[bin]]
name = "voxbirch"
path = "src/bin/voxbirch.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.2", features = ["derive"] }
nalgebra = "0.34.1"
rand = "0.9.2"
log = "0.4"
env_logger = "0.11.8"
chrono = "0.4"
wincode = "0.2.5"
serde = "1.0.228"
wincode-derive = "0.2.3"
sysinfo = "0.37.2"
